# lead_generator

./: .gitignore
B2B/dashboard/backend/: .env.example  README.md  alembic.ini  jaydip_voice.md  linkedin_api.py  linkedin_claude.py  linkedin_db.py  linkedin_enrich.py  linkedin_extras.py  linkedin_gmail.py  linkedin_reply_match.py  main.py  pyproject.toml  pytest.ini  run-prod.ps1  sources_api.py
B2B/dashboard/backend/app/: __init__.py  config.py  db.py  deps.py  main.py
B2B/dashboard/backend/app/auth/: __init__.py  jwt.py  router.py  users.py
B2B/dashboard/backend/app/linkedin/: PLAN.md  api.py  db.py  extras.py  schemas.py
B2B/dashboard/backend/app/marcel/: db.py  models.py
B2B/dashboard/backend/app/routers/: __init__.py  actions.py  batches.py  bridge.py  jobs.py  leads.py  overview.py  replies.py  source_actions.py  sources.py
B2B/dashboard/backend/app/schemas/: actions.py  sources.py
B2B/dashboard/backend/app/services/: __init__.py  batch_export.py  preflight.py  schedules.py  scrape_args.py  sources.py
B2B/dashboard/backend/app/yc/: __init__.py  models.py
B2B/dashboard/backend/migrations/: env.py
B2B/dashboard/backend/migrations/versions/: 2026_05_04_024f7748d9a9_initial_schema.py  (+6 more)
B2B/dashboard/backend/scripts/: import_sqlite_to_postgres.py  migrate_marcel_sqlite_to_pg.py  migrate_yc_sqlite_to_pg.py  register_user.py
B2B/dashboard/backend/tests/: conftest.py  test_bridge_probe.py  test_email_helpers.py  test_gmail_account_lifecycle.py  test_kv_settings.py  test_match_reply.py  test_replies_dedup.py  test_runtime_settings_api.py
(+177 files in other folders)
