[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.0",
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.46.0",
]
